Terraform/hub-and-spoke-advanced/vnet_hub.tf
##### VNET

resource "azurerm_virtual_network" "hub" {
  name                = "${var.vnet_hub.name}"
  address_space       = ["${var.vnet_hub.iprange}"]
  location            = "${var.location}"
  resource_group_name = "${azurerm_resource_group.net-hub.name}"
}

##### SUBNET

resource "azurerm_subnet" "azurefirewall" {
  name                 = "${var.vnet_hub.subnet_azurefirewall_name}"
  address_prefix       = "${var.vnet_hub.subnet_azurefirewall_iprange}"
  resource_group_name  = "${azurerm_resource_group.net-hub.name}"
  virtual_network_name = "${azurerm_virtual_network.hub.name}"
}

resource "azurerm_subnet" "gatewaysubnet" {
  name                 = "${var.vnet_hub.subnet_gateway_name}"
  address_prefix       = "${var.vnet_hub.subnet_gateway_iprange}"
  resource_group_name  = "${azurerm_resource_group.net-hub.name}"
  virtual_network_name = "${azurerm_virtual_network.hub.name}"
}

resource "azurerm_subnet" "jumpnet" {
  name                      = "${var.vnet_hub.subnet_jumpnet_name}"
  address_prefix            = "${var.vnet_hub.subnet_jumpnet_iprange}"
  resource_group_name       = "${azurerm_resource_group.net-hub.name}"
  virtual_network_name      = "${azurerm_virtual_network.hub.name}"
  network_security_group_id = "${azurerm_network_security_group.jumpnet.id}"
}

resource "azurerm_subnet" "hub-servernet" {
  name                 = "${var.vnet_hub.subnet_servernet_name}"
  address_prefix       = "${var.vnet_hub.subnet_servernet_iprange}"
  resource_group_name  = "${azurerm_resource_group.net-hub.name}"
  virtual_network_name = "${azurerm_virtual_network.hub.name}"
  route_table_id       = "${azurerm_route_table.udr_hub_servernet.id}"
}

##### NSG

resource "azurerm_network_security_group" "jumpnet" {
  name                = "nsg-jumpnet"
  location            = "westeurope"
  resource_group_name = "${azurerm_resource_group.net-hub.name}"

  security_rule {
    name                       = "SSH"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "${var.home_ip}"
    destination_address_prefix = "*"
  }
}

##### PEERING

resource "azurerm_virtual_network_peering" "hub-to-spoke" {
  name                         = "hub-to-spoke"
  resource_group_name          = "${azurerm_resource_group.net-hub.name}"
  virtual_network_name         = "${azurerm_virtual_network.hub.name}"
  remote_virtual_network_id    = "${azurerm_virtual_network.spoke.id}"
  allow_virtual_network_access = true
}

##### ROUTING

resource "azurerm_route_table" "udr_hub_servernet" {
  name                          = "udr-servernet"
  location                      = "${var.location}"
  resource_group_name           = "${azurerm_resource_group.net-hub.name}"
  disable_bgp_route_propagation = true

  route {
    name                   = "AzureFirewall"
    address_prefix         = "0.0.0.0/0"
    next_hop_type          = "VirtualAppliance"
    next_hop_in_ip_address = "10.0.0.4"
  }
}

# resource "azurerm_route_table" "udr_hub_jumpnet" {
#   name                          = "udr-jumpnet"
#   location                      = "${var.location}"
#   resource_group_name           = "${azurerm_resource_group.net-hub.name}"
#   disable_bgp_route_propagation = true

#   route {
#     name                   = "AzureFirewall"
#     address_prefix         = "0.0.0.0/0"
#     next_hop_type          = "VirtualAppliance"
#     next_hop_in_ip_address = "10.0.0.4"
#   }
# }

resource "azurerm_subnet_route_table_association" "udr_subnet_hub_servers" {
  subnet_id      = "${azurerm_subnet.hub-servernet.id}"
  route_table_id = "${azurerm_route_table.udr_hub_servernet.id}"
}

# resource "azurerm_subnet_route_table_association" "udr_subnet_hub_jumpnet" {
#   subnet_id      = "${azurerm_subnet.jumpnet.id}"
#   route_table_id = "${azurerm_route_table.udr_hub_jumpnet.id}"
# }
